--- a/Gestao_Educacional/src/assets/main.css
+++ b/Gestao_Educacional/src/assets/main.css
@@ -1,27 +1,13 @@
 @import './bootstrap.min.css';
 @import './style.css';
 
-
-
+/* Remova ou comente as seguintes regras que estão causando conflitos */
+/*
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
 }
 
 @media (min-width: 1024px) {
@@ -36,4 +22,18 @@ a,
     padding: 0 2rem;
   }
 }
+*/
 
+a,
+.green {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
+  padding: 3px;
+}
+
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
+  }
+}
