--- a/Gestao_Educacional/src/assets/style.css
+++ b/Gestao_Educacional/src/assets/style.css
@@ -1,10 +1,9 @@
 /********** Template CSS **********/
 
-
 :root {
-  --primary: #009CFF;
-  --light: #F3F6F9;
-  --dark: #191C24;
+  --primary: #009cff;
+  --light: #f3f6f9;
+  --dark: #191c24;
 }
 
 .back-to-top {
@@ -15,29 +14,31 @@
   z-index: 99;
 }
 
-
 /*** Spinner ***/
 #spinner {
   opacity: 0;
   visibility: hidden;
-  transition: opacity .5s ease-out, visibility 0s linear .5s;
+  transition:
+    opacity 0.5s ease-out,
+    visibility 0s linear 0.5s;
   z-index: 99999;
 }
 
 #spinner.show {
-  transition: opacity .5s ease-out, visibility 0s linear 0s;
+  transition:
+    opacity 0.5s ease-out,
+    visibility 0s linear 0s;
   visibility: visible;
   opacity: 1;
 }
 
-
 /*** Button ***/
 .btn {
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .btn.btn-primary {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .btn-square {
@@ -66,7 +67,6 @@
   border-radius: 50px;
 }
 
-
 /*** Layout ***/
 .sidebar {
   position: fixed;
@@ -82,46 +82,45 @@
 }
 
 .content {
-  margin-left: 250px;
+  margin-left: 15%;
   min-height: 100vh;
-  background: #FFFFFF;
+  background: #ffffff;
   transition: 0.5s;
 }
 
 @media (min-width: 992px) {
   .sidebar {
-      margin-left: 0;
+    margin-left: 0;
   }
 
   .sidebar.open {
-      margin-left: -250px;
+    margin-left: -250px;
   }
 
   .content {
-      width: calc(100% - 250px);
+    width: calc(100% - 250px);
   }
 
   .content.open {
-      width: 100%;
-      margin-left: 0;
+    width: 100%;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 991.98px) {
   .sidebar {
-      margin-left: -250px;
+    margin-left: -250px;
   }
 
   .sidebar.open {
-      margin-left: 0;
+    margin-left: 0;
   }
 
   .content {
-      width: 100%;
-      margin-left: 0;
+    width: 100%;
+    margin-left: 0;
   }
 }
-
 
 /*** Navbar ***/
 .sidebar .navbar .navbar-nav .nav-link {
@@ -136,7 +135,7 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
   color: var(--primary);
-  background: #FFFFFF;
+  background: #ffffff;
   border-color: var(--primary);
 }
 
@@ -146,7 +145,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 40px;
 }
 
@@ -160,13 +159,13 @@
   top: 15px;
   right: 15px;
   border: none;
-  content: "\f107";
-  font-family: "Font Awesome 5 Free";
+  content: '\f107';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.sidebar .navbar .dropdown-toggle[aria-expanded=true]::after {
+.sidebar .navbar .dropdown-toggle[aria-expanded='true']::after {
   transform: rotate(-180deg);
 }
 
@@ -194,7 +193,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 40px;
 }
 
@@ -202,22 +201,21 @@
   margin-left: 6px;
   vertical-align: middle;
   border: none;
-  content: "\f107";
-  font-family: "Font Awesome 5 Free";
+  content: '\f107';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.content .navbar .dropdown-toggle[aria-expanded=true]::after {
+.content .navbar .dropdown-toggle[aria-expanded='true']::after {
   transform: rotate(-180deg);
 }
 
 @media (max-width: 575.98px) {
   .content .navbar .navbar-nav .nav-link {
-      margin-left: 15px;
+    margin-left: 15px;
   }
 }
-
 
 /*** Date Picker ***/
 .bootstrap-datetimepicker-widget.bottom {
@@ -246,13 +244,11 @@
   border-bottom-color: var(--primary);
 }
 
-
 /*** Testimonial ***/
 .progress .progress-bar {
   width: 0px;
   transition: 2s;
 }
-
 
 /*** Testimonial ***/
 .testimonial-carousel .owl-dots {
@@ -270,7 +266,7 @@
   height: 15px;
   border: 5px solid var(--primary);
   border-radius: 15px;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .testimonial-carousel .owl-dot.active {
@@ -279,6 +275,6 @@
 }
 
 .content {
-background: #fff !important;
-color: #000 !important;
+  background: #fff !important;
+  color: #000 !important;
 }
