--- a/Gestao_Educacional/src/assets/style.css
+++ b/Gestao_Educacional/src/assets/style.css
@@ -278,3 +278,15 @@
   background: #fff !important;
   color: #000 !important;
 }
+
+.bg-success-subtle {
+  background-color: #e6f4ea !important;
+}
+.bg-secondary-subtle {
+  background-color: #f2f2f2 !important;
+}
+
+.shadow-sm {
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.05);
+}
+
